fixed #nosource error in bib files

--- a/content/publication/iglesias-mixed-2011/cite.bib
+++ b/content/publication/iglesias-mixed-2011/cite.bib
@@ -6,7 +6,7 @@
  file = {Iglesias et al. 2011 The Journal of neuroscience the official journal of the Society for Neuroscience.pdf:/Users/manuel/Articles/PDFs/Iglesias et al. 2011 The Journal of neuroscience the official journal of the Society for Neuroscience.pdf:application/pdf},
  issn = {1529-2401},
  journal = {The Journal of neuroscience : the official journal of the Society for Neuroscience},
- keywords = {Animals, Female, Mice, Motor Neurons, Spinal Cord, Patch-Clamp Techniques, Sodium Channels, Algorithms, Computer Simulation, Data Interpretation- Statistical, Electrophysiological Phenomena, Membranes, Models- Neurological, #nosource},
+ keywords = {Animals, Female, Mice, Motor Neurons, Spinal Cord, Patch-Clamp Techniques, Sodium Channels, Algorithms, Computer Simulation, Data Interpretation- Statistical, Electrophysiological Phenomena, Membranes, Models- Neurological, },
  month = {April},
  number = {15},
  pages = {5829--40},
