--- a/content/publication/manuel-adult-2011/cite.bib
+++ b/content/publication/manuel-adult-2011/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel & Heckman 2011 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel & Heckman 2011 The Journal of neuroscience.pdf:application/pdf},
  issn = {1529-2401},
  journal = {The Journal of neuroscience},
- keywords = {Animals, Electric Stimulation, Female, Mice, Motor Neurons, Reaction Time, Sciatic Nerve, Electromyography, Muscle Contraction, Action Potentials, Analysis of Variance, Muscle Fibers- Skeletal, Muscle- Skeletal, Recruitment- Neurophysiological, Statistics as Topic, #nosource},
+ keywords = {Animals, Electric Stimulation, Female, Mice, Motor Neurons, Reaction Time, Sciatic Nerve, Electromyography, Muscle Contraction, Action Potentials, Analysis of Variance, Muscle Fibers- Skeletal, Muscle- Skeletal, Recruitment- Neurophysiological, Statistics as Topic, },
  language = {eng},
  month = {October},
  number = {42},
