--- a/content/publication/manuel-afterhyperpolarization-2006/cite.bib
+++ b/content/publication/manuel-afterhyperpolarization-2006/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel et al. 2006 The Journal of physiology.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2006 The Journal of physiology.pdf:application/pdf},
  issn = {0022-3751},
  journal = {The Journal of physiology},
- keywords = {Animals, Cats, Motor Neurons, Patch-Clamp Techniques, Time Factors, Membrane Potentials, Action Potentials, Chelating Agents, Egtazic Acid, Mathematics, Neural Conduction, Synaptic Transmission, Unconsciousness, #nosource},
+ keywords = {Animals, Cats, Motor Neurons, Patch-Clamp Techniques, Time Factors, Membrane Potentials, Action Potentials, Chelating Agents, Egtazic Acid, Mathematics, Neural Conduction, Synaptic Transmission, Unconsciousness, },
  language = {eng},
  month = {November},
  number = {Pt 3},
