--- a/content/publication/manuel-alpha-2011/cite.bib
+++ b/content/publication/manuel-alpha-2011/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel & Zytnicki 2011 Journal of integrative neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel & Zytnicki 2011 Journal of integrative neuroscience.pdf:application/pdf},
  issn = {0219-6352},
  journal = {Journal of integrative neuroscience},
- keywords = {Animals, Motor Neurons, Humans, Synapses, Muscles, Adaptation- Physiological, #nosource},
+ keywords = {Animals, Motor Neurons, Humans, Synapses, Muscles, Adaptation- Physiological, },
  language = {eng},
  month = {September},
  number = {3},
