--- a/content/publication/manuel-fast-2009/cite.bib
+++ b/content/publication/manuel-fast-2009/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel et al. 2009 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2009 The Journal of neuroscience.pdf:application/pdf},
  issn = {1529-2401},
  journal = {The Journal of neuroscience},
- keywords = {Animals, Cats, Mice, Motor Neurons, Rats, Spinal Cord, Time Factors, Membrane Potentials, Action Potentials, Age Factors, Species Specificity, Biological Clocks, Mice- Inbred C57BL, #nosource},
+ keywords = {Animals, Cats, Mice, Motor Neurons, Rats, Spinal Cord, Time Factors, Membrane Potentials, Action Potentials, Age Factors, Species Specificity, Biological Clocks, Mice- Inbred C57BL, },
  language = {eng},
  month = {September},
  number = {36},
