--- a/content/publication/manuel-how-2005/cite.bib
+++ b/content/publication/manuel-how-2005/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel et al. 2005 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2005 The Journal of neuroscience.pdf:application/pdf},
  issn = {1529-2401},
  journal = {The Journal of neuroscience},
- keywords = {Animals, Cats, Electric Stimulation, Motor Neurons, Reaction Time, Spinal Cord, Action Potentials, Models- Neurological, Electric Conductivity, Electrophysiology, Lumbar Vertebrae, #nosource},
+ keywords = {Animals, Cats, Electric Stimulation, Motor Neurons, Reaction Time, Spinal Cord, Action Potentials, Models- Neurological, Electric Conductivity, Electrophysiology, Lumbar Vertebrae, },
  language = {eng},
  month = {September},
  number = {39},
