--- a/content/publication/manuel-nmda-2012/cite.bib
+++ b/content/publication/manuel-nmda-2012/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel et al. 2012 Journal of neurophysiology.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2012 Journal of neurophysiology.pdf:application/pdf},
  issn = {1522-1598},
  journal = {Journal of neurophysiology},
- keywords = {#nosource},
+ keywords = {},
  language = {eng},
  month = {December},
  number = {11},
