--- a/content/publication/manuel-resonant-2007/cite.bib
+++ b/content/publication/manuel-resonant-2007/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel et al. 2007 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2007 The Journal of neuroscience.pdf:application/pdf},
  issn = {1529-2401},
  journal = {The Journal of neuroscience},
- keywords = {Animals, Cats, Motor Neurons, Reaction Time, Spinal Cord, Excitatory Postsynaptic Potentials, Proprioception, Calcium Channels, Sodium Channels, Models- Neurological, #nosource},
+ keywords = {Animals, Cats, Motor Neurons, Reaction Time, Spinal Cord, Excitatory Postsynaptic Potentials, Proprioception, Calcium Channels, Sodium Channels, Models- Neurological, },
  language = {eng},
  month = {November},
  number = {47},
