--- a/content/publication/manuel-simultaneous-2012/cite.bib
+++ b/content/publication/manuel-simultaneous-2012/cite.bib
@@ -6,7 +6,7 @@
  file = {Manuel et al. 2012 Journal of visualized experiments JoVE.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2012 Journal of visualized experiments JoVE.pdf:application/pdf},
  issn = {1940-087X},
  journal = {Journal of visualized experiments : JoVE},
- keywords = {Animals, Mice, Motor Neurons, Motor Neurons: physiology, Spinal Cord, Neuromuscular Junction, Neuromuscular Junction: physiology, Lumbosacral Region, Spinal Cord: physiology, Spinal Cord: cytology, Muscles, Muscles: innervation, Electrophysiological Phenomena, Achilles Tendon, Achilles Tendon: surgery, Dissection, Laminectomy, Muscles: physiology, #nosource},
+ keywords = {Animals, Mice, Motor Neurons, Motor Neurons: physiology, Spinal Cord, Neuromuscular Junction, Neuromuscular Junction: physiology, Lumbosacral Region, Spinal Cord: physiology, Spinal Cord: cytology, Muscles, Muscles: innervation, Electrophysiological Phenomena, Achilles Tendon, Achilles Tendon: surgery, Dissection, Laminectomy, Muscles: physiology, },
  language = {eng},
  month = {January},
  number = {70},
