--- a/content/publication/manuel-stronger-2011/cite.bib
+++ b/content/publication/manuel-stronger-2011/cite.bib
@@ -5,7 +5,7 @@
  file = {Manuel & Heckman 2011 Experimental neurology.pdf:/Users/manuel/Articles/PDFs/Manuel & Heckman 2011 Experimental neurology.pdf:application/pdf},
  issn = {1090-2430},
  journal = {Experimental neurology},
- keywords = {Animals, Amyotrophic Lateral Sclerosis, Humans, Amino Acids- Branched-Chain, Dietary Supplements, Muscle Strength, Resistance Training, #nosource},
+ keywords = {Animals, Amyotrophic Lateral Sclerosis, Humans, Amino Acids- Branched-Chain, Dietary Supplements, Muscle Strength, Resistance Training, },
  language = {eng},
  month = {March},
  number = {1},
