--- a/lab-publications.bib
+++ b/lab-publications.bib
@@ -13,7 +13,7 @@
 	author = {Manuel, Marin and Li, Yaqing and Elbasiouny, Sherif M and Murray, Katie and Griener, Anna and Heckman, C J and Bennett, David J},
 	month = dec,
 	year = {2012},
-	keywords = {\#nosource},
+	keywords = {\},
 	pages = {2991--2998},
 	file = {Manuel et al. 2012 Journal of neurophysiology.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2012 Journal of neurophysiology.pdf:application/pdf}
 }
@@ -33,7 +33,7 @@
 	author = {Manuel, Marin and Heckman, C J},
 	month = oct,
 	year = {2011},
-	keywords = {Animals, Electric Stimulation, Female, Mice, Motor Neurons, Reaction Time, Sciatic Nerve, Electromyography, Muscle Contraction, Action Potentials, Analysis of Variance, Muscle Fibers- Skeletal, Muscle- Skeletal, Recruitment- Neurophysiological, Statistics as Topic, \#nosource},
+	keywords = {Animals, Electric Stimulation, Female, Mice, Motor Neurons, Reaction Time, Sciatic Nerve, Electromyography, Muscle Contraction, Action Potentials, Analysis of Variance, Muscle Fibers- Skeletal, Muscle- Skeletal, Recruitment- Neurophysiological, Statistics as Topic, \},
 	pages = {15188--15194},
 	file = {Manuel & Heckman 2011 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel & Heckman 2011 The Journal of neuroscience.pdf:application/pdf}
 }
@@ -52,7 +52,7 @@
 	author = {Manuel, Marin and Heckman, C J},
 	month = mar,
 	year = {2011},
-	keywords = {Animals, Amyotrophic Lateral Sclerosis, Humans, Amino Acids- Branched-Chain, Dietary Supplements, Muscle Strength, Resistance Training, \#nosource},
+	keywords = {Animals, Amyotrophic Lateral Sclerosis, Humans, Amino Acids- Branched-Chain, Dietary Supplements, Muscle Strength, Resistance Training, \},
 	pages = {5--8},
 	file = {Manuel & Heckman 2011 Experimental neurology.pdf:/Users/manuel/Articles/PDFs/Manuel & Heckman 2011 Experimental neurology.pdf:application/pdf}
 }
@@ -71,7 +71,7 @@
 	month = jan,
 	year = {2012},
 	pmid = {23242236},
-	keywords = {Animals, Mice, Motor Neurons, Motor Neurons: physiology, Spinal Cord, Neuromuscular Junction, Neuromuscular Junction: physiology, Lumbosacral Region, Spinal Cord: physiology, Spinal Cord: cytology, Muscles, Muscles: innervation, Electrophysiological Phenomena, Achilles Tendon, Achilles Tendon: surgery, Dissection, Laminectomy, Muscles: physiology, \#nosource},
+	keywords = {Animals, Mice, Motor Neurons, Motor Neurons: physiology, Spinal Cord, Neuromuscular Junction, Neuromuscular Junction: physiology, Lumbosacral Region, Spinal Cord: physiology, Spinal Cord: cytology, Muscles, Muscles: innervation, Electrophysiological Phenomena, Achilles Tendon, Achilles Tendon: surgery, Dissection, Laminectomy, Muscles: physiology, \},
 	pages = {e4312},
 	file = {Manuel et al. 2012 Journal of visualized experiments JoVE.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2012 Journal of visualized experiments JoVE.pdf:application/pdf}
 }
@@ -91,7 +91,7 @@
 	author = {Manuel, Marin and Meunier, Claude and Donnet, Maud and Zytnicki, Daniel},
 	month = sep,
 	year = {2005},
-	keywords = {Animals, Cats, Electric Stimulation, Motor Neurons, Reaction Time, Spinal Cord, Action Potentials, Models- Neurological, Electric Conductivity, Electrophysiology, Lumbar Vertebrae, \#nosource},
+	keywords = {Animals, Cats, Electric Stimulation, Motor Neurons, Reaction Time, Spinal Cord, Action Potentials, Models- Neurological, Electric Conductivity, Electrophysiology, Lumbar Vertebrae, \},
 	pages = {8917--8923},
 	file = {Manuel et al. 2005 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2005 The Journal of neuroscience.pdf:application/pdf}
 }
@@ -110,7 +110,7 @@
 	author = {Manuel, Marin and Meunier, Claude and Donnet, Maud and Zytnicki, Daniel},
 	month = nov,
 	year = {2006},
-	keywords = {Animals, Cats, Motor Neurons, Patch-Clamp Techniques, Time Factors, Membrane Potentials, Action Potentials, Chelating Agents, Egtazic Acid, Mathematics, Neural Conduction, Synaptic Transmission, Unconsciousness, \#nosource},
+	keywords = {Animals, Cats, Motor Neurons, Patch-Clamp Techniques, Time Factors, Membrane Potentials, Action Potentials, Chelating Agents, Egtazic Acid, Mathematics, Neural Conduction, Synaptic Transmission, Unconsciousness, \},
 	pages = {873--886},
 	file = {Manuel et al. 2006 The Journal of physiology.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2006 The Journal of physiology.pdf:application/pdf}
 }
@@ -129,7 +129,7 @@
 	author = {Manuel, Marin and Meunier, Claude and Donnet, Maud and Zytnicki, Daniel},
 	month = nov,
 	year = {2007},
-	keywords = {Animals, Cats, Motor Neurons, Reaction Time, Spinal Cord, Excitatory Postsynaptic Potentials, Proprioception, Calcium Channels, Sodium Channels, Models- Neurological, \#nosource},
+	keywords = {Animals, Cats, Motor Neurons, Reaction Time, Spinal Cord, Excitatory Postsynaptic Potentials, Proprioception, Calcium Channels, Sodium Channels, Models- Neurological, \},
 	pages = {12977--12988},
 	file = {Manuel et al. 2007 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2007 The Journal of neuroscience.pdf:application/pdf}
 }
@@ -148,7 +148,7 @@
 	author = {Manuel, Marin and Iglesias, Caroline and Donnet, Maud and Leroy, Félix and Heckman, C J and Zytnicki, Daniel},
 	month = sep,
 	year = {2009},
-	keywords = {Animals, Cats, Mice, Motor Neurons, Rats, Spinal Cord, Time Factors, Membrane Potentials, Action Potentials, Age Factors, Species Specificity, Biological Clocks, Mice- Inbred C57BL, \#nosource},
+	keywords = {Animals, Cats, Mice, Motor Neurons, Rats, Spinal Cord, Time Factors, Membrane Potentials, Action Potentials, Age Factors, Species Specificity, Biological Clocks, Mice- Inbred C57BL, \},
 	pages = {11246--11256},
 	file = {Manuel et al. 2009 The Journal of neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel et al. 2009 The Journal of neuroscience.pdf:application/pdf}
 }
@@ -168,7 +168,7 @@
 	author = {Manuel, Marin and Zytnicki, Daniel},
 	month = sep,
 	year = {2011},
-	keywords = {Animals, Motor Neurons, Humans, Synapses, Muscles, Adaptation- Physiological, \#nosource},
+	keywords = {Animals, Motor Neurons, Humans, Synapses, Muscles, Adaptation- Physiological, \},
 	pages = {243--276},
 	file = {Manuel & Zytnicki 2011 Journal of integrative neuroscience.pdf:/Users/manuel/Articles/PDFs/Manuel & Zytnicki 2011 Journal of integrative neuroscience.pdf:application/pdf}
 }
@@ -187,7 +187,7 @@
 	month = apr,
 	year = {2011},
 	pmid = {21490224},
-	keywords = {Animals, Female, Mice, Motor Neurons, Spinal Cord, Patch-Clamp Techniques, Sodium Channels, Algorithms, Computer Simulation, Data Interpretation- Statistical, Electrophysiological Phenomena, Membranes, Models- Neurological, \#nosource},
+	keywords = {Animals, Female, Mice, Motor Neurons, Spinal Cord, Patch-Clamp Techniques, Sodium Channels, Algorithms, Computer Simulation, Data Interpretation- Statistical, Electrophysiological Phenomena, Membranes, Models- Neurological, \},
 	pages = {5829--40},
 	file = {Iglesias et al. 2011 The Journal of neuroscience the official journal of the Society for Neuroscience.pdf:/Users/manuel/Articles/PDFs/Iglesias et al. 2011 The Journal of neuroscience the official journal of the Society for Neuroscience.pdf:application/pdf}
 }
