added publications with features, started custom

--- a/content/publication/manuel-sub-optimal-2021/cite.bib
+++ b/content/publication/manuel-sub-optimal-2021/cite.bib
@@ -12,5 +12,6 @@
  url = {http://eneuro.org/lookup/doi/10.1523/ENEURO.0461-20.2020},
  urldate = {2021-01-26},
  year = {2021}
+ abstract = {Intracellular recordings using sharp microelectrodes often rely on a technique called Discontinuous Current-Clamp to accurately record the membrane potential while injecting current through the same microelectrode. It is well known that a poor choice of DCC switching rate can lead to under-or over-estimation of the cell potential, however, its effect on the cell firing is rarely discussed. Here, we show that sub-optimal switching rates lead to an overestimation of cell excitability. We performed intracellular recordings of mouse spinal motoneurons and recorded their firing in response to pulses and ramps of current in Bridge and DCC mode at various switching rates. We demonstrate that using an incorrect (too low) DCC frequency leads not only to an underestimation of the input resistance, but also, paradoxically, to an artificial overestimation of the firing of these cells: neurons fire at lower current, and at higher frequencies than at higher DCC rates, or than the same neuron recorded in Bridge mode. These effects are dependent on the membrane time constant of the recorded cell, and special care needs to be taken in large cells with very short time constants. Our work highlights the importance of choosing an appropriate DCC switching rate to obtain not only accurate membrane potential readings but also an accurate representation of the firing of the cell. **Significance Statement:** Discontinuous Current-Clamp is a technique often used during intracellular recordings in vivo. However, incorrect usage of this technique can lead to incorrect interpretations. Poor choice of the DCC switching rate can lead to under- or over-estimation of the cell potential. In addition, we show here that sub-optimal switching rates lead to an overestimation of the cell excitability.}
 }
 
